--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ endif()
 set (CMAKE_CXX_STANDARD 17)
 project(perftool)
 
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
+
 # GPU libraries
 find_package(CUDAToolkit)
 
@@ -12,8 +14,14 @@ if (NOT CUDAToolkit_FOUND)
   find_package(HIP REQUIRED)
   find_package(hipBLAS REQUIRED)
   find_package(rocBLAS REQUIRED)
-  set(GPU_LIBRARIES hip::host roc::rocblas roc::hipblas)
   add_definitions(-DHAVE_HIP)
+    if(USE_MAGMA)
+      find_package(MAGMA REQUIRED)
+  add_definitions(-DHAVE_MAGMA)
+  set(GPU_LIBRARIES hip::host roc::rocblas roc::hipblas magma)
+		else()
+  set(GPU_LIBRARIES hip::host roc::rocblas roc::hipblas)
+    endif()
 else()
   set(GPU_LIBRARIES CUDA::cudart CUDA::cublas)
   add_definitions(-DHAVE_CUDA)
