--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 # GPU libraries
 find_package(CUDAToolkit)
 
+file(GLOB SOURCES "src/*.cpp")
 if (NOT CUDAToolkit_FOUND)
   find_package(HIP REQUIRED)
   find_package(hipBLAS REQUIRED)
@@ -22,6 +23,9 @@ if (NOT CUDAToolkit_FOUND)
 		else()
   set(GPU_LIBRARIES hip::host roc::rocblas roc::hipblas)
     endif()
+enable_language(HIP)
+  set_source_files_properties(
+    ${SOURCES} PROPERTIES LANGUAGE HIP)
 else()
   set(GPU_LIBRARIES CUDA::cudart CUDA::cublas)
   add_definitions(-DHAVE_CUDA)
@@ -29,5 +33,5 @@ endif()
 message("GPU LIBS " ${GPU_LIBRARIES})
 
 
-add_executable(performance ${CMAKE_SOURCE_DIR}/src/performance.cpp)
+add_executable(performance ${SOURCES})
 target_link_libraries(performance PUBLIC ${GPU_LIBRARIES})
