--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,20 +11,27 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 find_package(CUDAToolkit)
 
 if (NOT CUDAToolkit_FOUND)
+	  list(APPEND CMAKE_MODULES_PREFIX $ENV{HIP_PATH}/cmake)
+list(APPEND CMAKE_PREFIX_PATH $ENV{HIP_PATH})
+list(APPEND CMAKE_MODULES_PREFIX /soft/compilers/chipStar/chip-spv/20250131-release/cmake)
   find_package(HIP REQUIRED)
-  find_package(hipBLAS REQUIRED)
-  find_package(rocBLAS REQUIRED)
-  find_package(hipSOLVER REQUIRED)
-  find_package(rocSOLVER REQUIRED)
+  #find_package(hipBLAS REQUIRED)
+  #find_package(rocBLAS REQUIRED)
+  #find_package(hipSOLVER REQUIRED)
+  #find_package(rocSOLVER REQUIRED)
   add_definitions(-DHAVE_HIP)
     if(USE_MAGMA)
       find_package(MAGMA REQUIRED)
   add_definitions(-DHAVE_MAGMA)
   set(GPU_LIBRARIES hip::host roc::hipblas roc::rocblas roc::hipsolver roc::hipsolver magma)
-		else()
-  set(GPU_LIBRARIES hip::host roc::hipblas roc::rocblas roc::hipsolver roc::hipsolver)
+  else()
+  set(GPU_LIBRARIES hip::host
+       -L${MATHLIB_ROOT}/lib  -L${HIPSOLVER_ROOT}/lib  -lhipblas -lhipsolver
+	  # roc::hipblas roc::rocblas roc::hipsolver roc::hipsolver
+	  )
+  include_directories(${HIPSOLVER_ROOT}/include)
     endif()
-enable_language(HIP)
+    #enable_language(HIP)
   set_source_files_properties(
     ${SOURCES} PROPERTIES LANGUAGE HIP)
 else()
